--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
 
-<h1> This is a test </h1>
+<nav>
+    <p class="name"> MOHAMED J. AL-KAWAZ </p>
+
+    <ul>
+        <li> About Me </li>
+        <li> Experince </li>
+        <li> Skills </li>
+        <li> Sites I Built </li>
+    </ul>
+
+</nav>
+
+<div></div>
     
 </body>
 </html>
