--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
         <li> Skills </li>
         <li> Sites I Built </li>
     </ul>
-
 </nav>
 
-<div></div>
+<div class="container">
+
+    <img src="#" alt="">
+
+    <div class="text"></div>
+    
+</div>
     
 </body>
 </html>
