--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
     <title> Muhammed AL-Kawaz </title>
 </head>
 <body>
 
-<nav>
-    <p class="name"> MOHAMED J. AL-KAWAZ </p>
 
-    <ul>
-        <li> About Me </li>
-        <li> Experince </li>
-        <li> Skills </li>
-        <li> Sites I Built </li>
-    </ul>
-</nav>
+<ul class="nav-bar">
+    <li> About Me </li>
+    <li> Skills </li>
+    <li> Sites I Built </li>
+    <li> Contact Me </li>
+</ul>
+
 
 <div class="container">
 
