--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title> Muhammed AL-Kawaz </title>
 </head>
 <body>
-
+<div class="container">
 
 <ul class="nav-bar">
     <li> About Me </li>
@@ -18,13 +18,7 @@
 </ul>
 
 
-<div class="container">
-
-    <img src="#" alt="">
-
-    <div class="text"></div>
-    
+<h1> MOHAMMED <h1>AL-KAWAZ </h1></h1>
 </div>
-    
 </body>
 </html>
