finishing up the basics

--- a/index.html
+++ b/index.html
@@ -18,7 +18,79 @@
 </ul>
 
 
-<h1> MOHAMMED <h1>AL-KAWAZ </h1></h1>
+<h1> MOHAMMED </h1>
+<h1 style="margin:0 5%;"> AL-KAWAZ </h1>
+
+<h2> web designer - web developer - peace lover </h2>
+
+<hr>
+
+<h1 style="
+text-align:left;
+font-size:35px;
+font-weight: lighter;"> A brief information</h1>
+
+<p>I was born and raised in Baghdad/Iraq. <br>
+At 4:00 A.M on 18 of August 1993,
+( I guess I was born an early bird ).<br>
+finished my high school in Baghdad, went to college in 2011.<br>
+In 2014 I met a beautiful woman and we fell in love,<br>
+now we are together with the sacred bond of marriage.<br>
+Got my B.D.S of dental surgery in 2016,<br>
+however, after five years of practicing my medical occupation,<br>
+I decided to do a career change.<br>
+this new practice that I picked up during COVID-19 quarantine<br>
+it was graphic design, then I decided to switch to coding,<br>
+in which I really found my self.</p>
+
+<hr>
+
+<p>Though I am still a beginner, I think I was born to code, <br>
+to build beautiful websites and to share<br>
+my logical thinking with this world.<br>
+that being said, I find my happiness in traveling, camping<br>
+and sharing with friends and family.</p>
+
+<hr>
+
+<h1 style="
+text-align:left;
+font-size:35px;
+font-weight: lighter;"> My Skills</h1>
+
+<p style="line-height: 50px;">- logical thinking. <br>
+- problem solving.<br>
+- good hand eye-coordination.<br>
+- HTML<br>
+- CSS<br>
+- JS<br>
+- Django (still in learning process)</p>
+
+<hr>
+
+<h1 style="
+text-align:left;
+font-size:35px;
+font-weight: lighter;"> Sites I Built </h1>
+
+<div class="gallary">
+    <div style="border: 1px solid whitesmoke; height: 50vh;"></div>
+    <div style="border: 1px solid whitesmoke; height: 50vh;"></div>
+    <div style="border: 1px solid whitesmoke; height: 50vh;"></div>
+    <div style="border: 1px solid whitesmoke; height: 50vh;"></div>
+</div>
+
+<hr>
+
+<h1 style="
+text-align:left;
+font-size:35px;
+font-weight: lighter;"> Contact Me </h1>
+
+<h3> muhammedalkawaz@gmail.com</h3>
+<h3 style="margin-bottom: 25vh;"> +964 77058 927 23</h3>
+
+
 </div>
 </body>
 </html>
