--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
    <script defer src="javascript/script.js"></script>
-    <title> Muhammed AL-Kawaz </title>
+    <title> Muhammed AL-Kawaz</title>
 </head>
 <body>
-<div class="container">
+
+<div class="mode_switch"></div>
 
 <ul class="nav-bar">
     <li> About Me </li>
@@ -18,8 +19,9 @@
     <li> Contact Me </li>
 </ul>
 
+<div class="container">
 
-<h1> MOHAMMED </h1>
+<h1> MOHAMMED J.</h1>
 <h1 style="margin:0 5%;"> AL-KAWAZ </h1>
 
 <h2> web designer - web developer - peace lover </h2>
