--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +9,18 @@
    <script defer src="javascript/script.js"></script>
     <title> Muhammed AL-Kawaz</title>
 </head>
+
 <body>
 
 <div class="mode_switch"></div>
 
-<ul class="nav-bar">
-    <li> About Me </li>
-    <li> Skills </li>
-    <li> Sites I Built </li>
-    <li> Contact Me </li>
+<ul class="nav-bar" style="color:#707070;">
+
+    <li class="h2 about_me"> About Me </li>
+    <li class="h2 skills"> Skills </li>
+    <li class="h2 sites"> Sites I Built </li>
+    <li class="h2 contact_me"> Contact Me </li>
+
 </ul>
 
 <div class="container">
@@ -24,9 +28,11 @@
 <h1> MOHAMMED J.</h1>
 <h1 style="margin:0 5%;"> AL-KAWAZ </h1>
 
-<h2> web designer - web developer - peace lover </h2>
+<h2 class="h2"> web designer - web developer - peace lover </h2>
 
 <hr>
+
+<div id="about_me" class="click_to_view"></div>
 
 <h1 style="
 text-align:left;
@@ -46,7 +52,7 @@ this new practice that I picked up during COVID-19 quarantine<br>
 it was graphic design, then I decided to switch to coding,<br>
 in which I really found my self.</p>
 
-<hr>
+
 
 <p>Though I am still a beginner, I think I was born to code, <br>
 to build beautiful websites and to share<br>
@@ -55,6 +61,8 @@ that being said, I find my happiness in traveling, camping<br>
 and sharing with friends and family.</p>
 
 <hr>
+
+<div id="skills" class="click_to_view"></div>
 
 <h1 style="
 text-align:left;
@@ -71,6 +79,8 @@ font-weight: lighter;"> My Skills</h1>
 
 <hr>
 
+<div id="sites" class="click_to_view"></div>
+
 <h1 style="
 text-align:left;
 font-size:35px;
@@ -85,13 +95,15 @@ font-weight: lighter;"> Sites I Built </h1>
 
 <hr>
 
+<div id="contact_me" class="click_to_view"></div>
+
 <h1 style="
 text-align:left;
 font-size:35px;
 font-weight: lighter;"> Contact Me </h1>
 
-<h3> muhammedalkawaz@gmail.com</h3>
-<h3 style="margin-bottom: 25vh;"> +964 77058 927 23</h3>
+<h3 class="h2"> muhammedalkawaz@gmail.com</h3>
+<h3 style="margin: 10vh 0 25vh 0;" class="h2"> +964 77058 927 23</h3>
 
 
 </div>
