--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-   <script defer src="javascript/script.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
+    <script defer src="javascript/script.js"></script>
     <title> Muhammed AL-Kawaz</title>
 </head>
 
@@ -32,7 +34,7 @@
 
 <hr>
 
-<div id="about_me" class="click_to_view"></div>
+<div id="about_me" class="click_to_view about_me_animation">
 
 <h1 style="
 text-align:left;
@@ -60,9 +62,10 @@ my logical thinking with this world.<br>
 that being said, I find my happiness in traveling, camping<br>
 and sharing with friends and family.</p>
 
+</div>
 <hr>
 
-<div id="skills" class="click_to_view"></div>
+<div id="skills" class="click_to_view my skills_animation">
 
 <h1 style="
 text-align:left;
@@ -77,9 +80,10 @@ font-weight: lighter;"> My Skills</h1>
 - JS<br>
 - Django (still in learning process)</p>
 
+</div>
 <hr>
 
-<div id="sites" class="click_to_view"></div>
+<div id="sites" class="click_to_view sites_animation">
 
 <h1 style="
 text-align:left;
@@ -93,9 +97,11 @@ font-weight: lighter;"> Sites I Built </h1>
     <div style="border: 1px solid whitesmoke; height: 50vh;"></div>
 </div>
 
+</div>
+
 <hr>
 
-<div id="contact_me" class="click_to_view"></div>
+<div id="contact_me" class="click_to_view contact_me_animation">
 
 <h1 style="
 text-align:left;
@@ -104,6 +110,8 @@ font-weight: lighter;"> Contact Me </h1>
 
 <h3 class="h2"> muhammedalkawaz@gmail.com</h3>
 <h3 style="margin: 10vh 0 25vh 0;" class="h2"> +964 77058 927 23</h3>
+
+</div>
 
 
 </div>
