adding my first website

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@ font-size:35px;
 font-weight: lighter;"> Sites I Built </h1>
 
 <div class="gallary">
-    <div style="border: 1px solid whitesmoke; height: 50vh;"></div>
+
+    <a href="guess the number.html" class="guess_the_num">
+    <div style="border: 1px solid whitesmoke; height: 50vh;"></div></a>
     <div style="border: 1px solid whitesmoke; height: 50vh;"></div>
     <div style="border: 1px solid whitesmoke; height: 50vh;"></div>
     <div style="border: 1px solid whitesmoke; height: 50vh;"></div>
