adding the websites

--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@ font-weight: lighter;"> My Skills</h1>
 
 <div id="sites" class="click_to_view sites_animation">
 
-<h1 style="
-text-align:left;
-font-size:35px;
-font-weight: lighter;"> Sites I Built </h1>
+    <h1 style="
+    text-align:left;
+    font-size:35px;
+    font-weight: lighter;"> Sites I Built </h1>
 
-<div class="gallary">
+    <div class="gallary">
 
-    <a href="guess the number.html" class="guess_the_num">
-    <div style="border: 1px solid whitesmoke; height: 50vh;"></div></a>
-    <div style="border: 1px solid whitesmoke; height: 50vh;"></div>
-    <div style="border: 1px solid whitesmoke; height: 50vh;"></div>
-    <div style="border: 1px solid whitesmoke; height: 50vh;"></div>
-</div>
+        <a class="guess_the_number" href="https://muhammed-py.github.io/Guess-the-number/" target="_blank"> <div class="text"> A simple Guess the Number game </div> </a> 
+        <a class="roll_the_dice" href="https://muhammed-py.github.io/Roll-the-dice/" target="_blank"> <div class="text"> A simple Roll The Dice game </div> </a>
+        <a class="falcons" href="https://muhammed-py.github.io/falcons-website/" target="_blank"> <div class="text"> A Portifolio for a company </div> </a>
+        <a class="space" href="https://muhammed-py.github.io/space-travel-website/" target="_blank"> <div class="text"> A scrolling effect website </div> </a>
+
+    </div>
 
 </div>
 
@@ -105,13 +105,13 @@ font-weight: lighter;"> Sites I Built </h1>
 
 <div id="contact_me" class="click_to_view contact_me_animation">
 
-<h1 style="
-text-align:left;
-font-size:35px;
-font-weight: lighter;"> Contact Me </h1>
+    <h1 style="
+    text-align:left;
+    font-size:35px;
+    font-weight: lighter;"> Contact Me </h1>
 
-<h3 class="h2"> muhammedalkawaz@gmail.com</h3>
-<h3 style="margin: 10vh 0 25vh 0;" class="h2"> +964 77058 927 23</h3>
+    <h3 class="h2"> muhammedalkawaz@gmail.com</h3>
+    <h3 style="margin: 10vh 0 25vh 0;" class="h2"> +964 77058 927 23</h3>
 
 </div>
 
