--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
     <script defer src="javascript/script.js"></script>
@@ -110,8 +111,15 @@ font-weight: lighter;"> My Skills</h1>
     font-size:35px;
     font-weight: lighter;"> Contact Me </h1>
 
-    <h3 class="h2"> muhammedalkawaz@gmail.com</h3>
-    <h3 style="margin: 10vh 0 25vh 0;" class="h2"> +964 77058 927 23</h3>
+    <h3 class="h2"> muhammedalkawaz@gmail.com </h3>
+    <h3 class="h2"> +964 77058 927 23</h3>
+
+    <div class="contact">
+        <a href=""> <img src="images/facebook-logo-13.png" alt=""> </a>
+        <a href=""> <img src="images/instagram.png" alt=""> </a>
+        <a href=""> <img src="images/github.png" alt=""> </a>
+        <a href=""> <img src="images/linkedin.png" alt=""> </a>
+    </div>
 
 </div>
 
