--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ At 4:00 A.M on 18 of August 1993,
 finished my high school in Baghdad, went to college in 2011.<br>
 In 2014 I met a beautiful woman and we fell in love,<br>
 now we are together with the sacred bond of marriage.<br>
-Got my B.D.S of dental surgery in 2016,<br>
+Got my BDS of dental surgery in 2016,<br>
 however, after five years of practicing my medical occupation,<br>
 I decided to do a career change.<br>
 this new practice that I picked up during COVID-19 quarantine<br>
@@ -97,13 +97,22 @@ text-align:left;
 font-size:35px;
 font-weight: lighter;"> My Skills</h1>
 
-<p style="line-height: 50px;">- logical thinking. <br>
+<p style="line-height: 50px;">
+<h3> common skills :</h3> 
+
+- logical thinking. <br>
 - problem solving.<br>
 - good hand eye-coordination.<br>
-- HTML<br>
-- CSS<br>
-- JS<br>
-- Django (still in learning process)</p>
+- Open to learning<br>
+
+<h3> Techinical skills :</h3> <br>
+
+- HTML.<br>
+- CSS.<br>
+- JS.<br>
+- Django (still in learning process).<br>
+- Data analysis.
+</p>
 
 </div>
 <hr>
