--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@ font-size:35px;
 font-weight: lighter;"> My Skills</h1>
 
 <p style="line-height: 50px;">
-<h3> common skills :</h3> 
+<h3 style="text-align: left;"> Common skills :</h3> 
 
 - logical thinking. <br>
 - problem solving.<br>
 - good hand eye-coordination.<br>
 - Open to learning<br>
 
-<h3> Techinical skills :</h3> <br>
+<h3 style="text-align: left;"> Techinical skills :</h3> <br>
 
 - HTML.<br>
 - CSS.<br>
