change in contact details

--- a/index.html
+++ b/index.html
@@ -145,11 +145,9 @@ font-weight: lighter;"> My Skills</h1>
     font-weight: lighter;"> Contact Me </h1>
 
     <h3 class="h2"> muhammedalkawaz@gmail.com </h3>
-    <h3 class="h2"> +964 77058 927 23</h3>
+    <h3 class="h2"> Vancouver, Canada </h3>
 
     <div class="contact">
-        <a href=""> <img src="images/facebook-logo-13.png" alt=""> </a>
-        <a href=""> <img src="images/instagram.png" alt=""> </a>
         <a href=""> <img src="images/github.png" alt=""> </a>
         <a href=""> <img src="images/linkedin.png" alt=""> </a>
     </div>
