--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ font-size:35px;
 font-weight: lighter;"> My Skills</h1>
 
 <p style="line-height: 50px;">
-<h3 style="text-align: left;"> Common skills :</h3> 
+<h3 style="text-align: left;"> Common skills :</h3> <br> 
 
 - logical thinking. <br>
 - problem solving.<br>
